# house-planner

./: .gitignore  README.md
.github/workflows/: stage.yml
browser/: .prettierignore  .prettierrc  README.md  package-lock.json  package.json  vite.config.ts
browser/app/: app.css  root.tsx
browser/app/client/: runtime.ts
browser/app/client/.openapi-generator/: FILES
browser/app/client/apis/: HouseApi.ts  MapApi.ts  index.ts
browser/app/client/models/: ErrorResponse.ts  HouseResponse.ts  Location.ts  MapRequest.ts  MapResponse.ts  MapTileResponse.ts  PaginatedResponseHouseResponse.ts  PaginatedResponseHouseResponseItemsInner.ts  RequirementRequest.ts  RequirementScoreResponse.ts  TravelMode.ts  index.ts
browser/app/components/BaseMap/: BaseMap.tsx
browser/app/components/HouseCard/: HouseCard.tsx
browser/app/hooks/: useHouses.tsx  useRequirements.tsx
browser/app/routes/: _index.tsx  home.$id.tsx  home.tsx
browser/app/utils/: apiClient.ts  constants.ts  pagination.ts  requirementUtils.ts
script/: pyproject.toml  travel_durations_cache.csv
script/src/openstreetmaps/: __init__.py  persistent_cache.py
server/: Cargo.toml  Dockerfile  Dockerfile copy  README.md  openapi.json
server/crates/api/: Cargo.toml
server/crates/api/src/: main.rs
server/crates/database/: Cargo.toml
server/crates/database/src/: attribute_value_parser.rs  dynamodb_client_cloud.rs  dynamodb_client_local.rs  dynamodb_client_trait.rs  house_item.rs  lib.rs  paginated_models.rs  requirement_item.rs  spatial_distance_item.rs
server/crates/database/src/dynamodb_client_local/: dynamodb_client_local.rs  houses.csv  mod.rs  spatial-distances.csv  spatial_distances.csv
server/crates/endpoints/: Cargo.toml
server/crates/endpoints/src/: errors.rs  house_endpoints.rs  lib.rs  map_endpoints.rs  pagination.rs  request.rs  router.rs  state.rs
server/crates/endpoints/src/house/: endpoints.rs  models.rs
server/crates/endpoints/src/map/: endpoints.rs  models.rs
server/crates/h3_mapper/: Cargo.toml
server/crates/h3_mapper/src/: adelaide_boundary.csv  h3_client.rs  lib.rs
server/crates/houses/: Cargo.toml
server/crates/houses/src/: houses.csv
server/crates/maps/: Cargo.toml
server/crates/maps/src/: models.rs
server/crates/openapi/: Cargo.toml
server/crates/openapi/src/: main.rs
server/crates/planner/: Cargo.toml
server/crates/planner/src/: lib.rs  models.rs  planner.rs
server/crates/populate_distances/: Cargo.toml
server/crates/populate_distances/src/: main.rs
server/crates/script/: Cargo.toml
server/crates/script/src/: main.rs
server/src/: openapi.rs  script.rs  serve.rs
server/src/database/: attribute_value_parser.rs  dynamodb_client_cloud.rs  dynamodb_client_local.rs  mod.rs  requirement_item.rs  spatial_distance_item.rs
server/src/endpoints/: house_endpoints.rs  map_endpoints.rs  mod.rs  request.rs  response.rs  router.rs
server/src/houses/: house_client.rs  mod.rs  models.rs
server/src/maps/: maps_client.rs  mod.rs  models.rs
server/src/planner/: models.rs  planner.rs
terraform/: README.md
terraform/browser/foundation/: main.tf  outputs.tf
terraform/browser/frame/: data.tf  main.tf  outputs.tf  route53.tf  s3.tf  variables.tf
terraform/browser/upload/: build.tf  cloudfront.tf  data.tf  main.tf  s3.tf
terraform/modules/shared_locals/: environment.tf  main.tf  outputs.tf
terraform/modules/website_cloudfront/: main.tf  outputs.tf  variables.tf
terraform/server/foundation/: db.tf  main.tf  outputs.tf
terraform/server/frame/: ecr.tf  main.tf  outputs.tf
terraform/server/upload/: api_gateway.tf  api_gateway_endpoints.tf  build.tf  containers.tf  data.tf  lambda.tf  main.tf  output.tf
(+11 files in other folders)
