[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum ="0.8.1"
csv = "1.3"
dotenv = "0.15"
hyper = "1.5.1"
reqwest = { version="0.12", features=["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tower-http = {version="0.6.2", features = ["trace"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["json"] }
utoipa = "5.3"
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

[build-dependencies]
axum ="0.8.1"
utoipa = "5.3"
utoipa-axum = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "openapi"
path = "src/openapi.rs"

[[bin]]
name = "script"
path = "src/script.rs"

[[bin]]
name = "serve"
path = "src/serve.rs"


# I set local_trigger as default for ease of building locally.
# When building for the cloud, the docker image will replace it with the api_gateway_trigger.
[features]
default = ["local_trigger"]
api_gateway_trigger = []
local_trigger = []